--- a/InventoryManagement.Web/Inventory Management.Web.csproj
+++ b/InventoryManagement.Web/Inventory Management.Web.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FailTracker.Web</RootNamespace>
-    <AssemblyName>FailTracker.Web</AssemblyName>
+    <RootNamespace>InventoryManagement.Web</RootNamespace>
+    <AssemblyName>InventoryManagement.Web</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
@@ -177,9 +177,12 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IssueController.cs" />
+    <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Domain\Issue.cs" />
     <Compile Include="Domain\IssueType.cs" />
+    <Compile Include="Domain\Carton.cs" />
     <Compile Include="Domain\LogAction.cs" />
+    <Compile Include="Domain\Item.cs" />
     <Compile Include="Filters\IssueTypeSelectListPopulatorAttribute.cs" />
     <Compile Include="Filters\LogAttribute.cs" />
     <Compile Include="Filters\UserSelectListPopulatorAttribute.cs" />
@@ -218,6 +221,10 @@
     <Compile Include="Infrastructure\Tasks\IRunOnError.cs" />
     <Compile Include="Infrastructure\Tasks\TaskRegistry.cs" />
     <Compile Include="Infrastructure\TransactionPerRequest.cs" />
+    <Compile Include="Migrations\201602070607333_Add_Models.cs" />
+    <Compile Include="Migrations\201602070607333_Add_Models.Designer.cs">
+      <DependentUpon>201602070607333_Add_Models.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Data\ApplicationDbContext.cs" />
@@ -227,6 +234,8 @@
     <Compile Include="Models\Issue\IssueDetailsViewModel.cs" />
     <Compile Include="Models\Issue\IssueSummaryViewModel.cs" />
     <Compile Include="Models\Issue\NewIssueForm.cs" />
+    <Compile Include="Models\Item\ItemSummaryViewModel.cs" />
+    <Compile Include="Models\Item\NewItemForm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -303,6 +312,8 @@
     <Content Include="Views\Shared\EditorTemplates\UserID.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\ReadOnly.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Object.cshtml" />
+    <Content Include="Views\Item\Index.cshtml" />
+    <Content Include="Views\Item\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -310,6 +321,11 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201602070607333_Add_Models.resx">
+      <DependentUpon>201602070607333_Add_Models.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
