--- a/InventoryManagement.Web/Inventory Management.Web.csproj
+++ b/InventoryManagement.Web/Inventory Management.Web.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Data\ApplicationDbContext.cs" />
     <Compile Include="Domain\ApplicationUser.cs" />
     <Compile Include="Models\Inventory\CartonInventory.cs" />
+    <Compile Include="Models\Inventory\InventorySummary.cs" />
     <Compile Include="Models\Inventory\ItemInventory.cs" />
     <Compile Include="Models\Issue\AssignmentStatsViewModel.cs" />
     <Compile Include="Models\Issue\EditIssueForm.cs" />
